--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -32,8 +32,8 @@ jobs:
         - name: set config files
           run: |
             cd _build/emqx/lib
+            sudo chmod 666 ./emqx*/etc/*.conf
             for var in $(ls); do
-              sudo chmod 666 ./$var/etc/*.conf
               if [ $var == "emqx_auth_mysql" ];then
                 sed -i "/auth.mysql.server/c auth.mysql.server = mysql_server:3306" ./$var/etc/emqx_auth_mysql.conf 
                 echo "auth.mysql.username = root" >> ./$var/etc/emqx_auth_mysql.conf
