--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -12,25 +12,20 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - uses: actions/checkout@v2
-        - name: fetch all history for all tags and branches
-          run: |
-            git fetch --prune --unshallow
+        - uses: actions/checkout@v1
+        - name: get deps
+          run: make distclean &&  EMQX_DEPS_DEFAULT_VSN=develop make deps-emqx
         - name: Install docker-compose
           run: | 
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
         - name: docker-compose build
-          run:  docker-compose -f .ci/docker-compose.yaml build
+          run: |
+            cp _build/emqx/lib/emqx_auth_ldap/emqx.io.ldif .ci/emqx-ldap/schema
+            cp _build/emqx/lib/emqx_auth_ldap/emqx.schema .ci/emqx-ldap/schema
+            docker-compose -f .ci/docker-compose.yaml build --no-cache
         - name: docker-compose up
           run:  docker-compose -p emqx_auto_func_test -f .ci/docker-compose.yaml up -d
-        - name: get deps
-          run:  docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make distclean && EMQX_DEPS_DEFAULT_VSN=develop make deps-emqx"
-        - uses: actions/upload-artifact@v1
-          if: failure()
-          with:
-            name: rebar3.crashdump
-            path: rebar3.crashdump
         - name: set config files
           run: |
             cd _build/emqx/lib
@@ -54,8 +49,9 @@ jobs:
                 sed -i "/auth.ldap.servers/c auth.ldap.servers = ldap_server" ./$var/etc/emqx_auth_ldap.conf 
               fi
             done
+            cd -
         - name: run all test cases
-          run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && EMQX_DEPS_DEFAULT_VSN=develop make ct -k -j 4"
+          run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make ct -k"
         - name: get the results
           run: docker exec emqx_auto_func_test_python_1 bash -xc "cd /emqx-rel/tests/logs && python /emqx-rel/.ci/boot.py"
         - uses: actions/upload-artifact@v1
