--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -53,7 +53,7 @@ jobs:
         - name: run all test cases
           run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make ct -k"
         - name: get the results
-          run: docker exec emqx_auto_func_test_python_1 bash -xc "cd /emqx-rel/tests/logs && python /emqx-rel/.ci/boot.py"
+          run: docker exec emqx_auto_func_test_python_1 bash -xc "pip install --upgrade pip && pip install beautifulsoup4 && cd /emqx-rel/tests && python /emqx-rel/.ci/boot.py"
         - uses: actions/upload-artifact@v1
           if: always()
           with:
