--- a/.github/workflows/run_all_test_cases.yaml
+++ b/.github/workflows/run_all_test_cases.yaml
@@ -30,11 +30,11 @@ jobs:
             sudo chmod +x /usr/local/bin/docker-compose
         - name: docker-compose build
           run: |
-            cp _build/emqx/lib/emqx_auth_ldap/emqx.io.ldif .ci/emqx-ldap/schema
-            cp _build/emqx/lib/emqx_auth_ldap/emqx.schema .ci/emqx-ldap/schema
-            docker-compose -f .ci/docker-compose.yaml build --no-cache
+            cp _build/emqx/lib/emqx_auth_ldap/emqx.io.ldif .ci/deps_tests/emqx-ldap/schema
+            cp _build/emqx/lib/emqx_auth_ldap/emqx.schema .ci/deps_tests/emqx-ldap/schema
+            docker-compose -f .ci/deps_tests/docker-compose.yaml build --no-cache
         - name: docker-compose up
-          run:  docker-compose -p emqx_auto_func_test -f .ci/docker-compose.yaml up -d
+          run:  docker-compose -p emqx_auto_func_test -f .ci/deps_tests/docker-compose.yaml up -d
         - name: set config files
           run: |
             cd _build/emqx/lib
@@ -62,7 +62,7 @@ jobs:
         - name: run all test cases
           run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && make ct -k"
         - name: get the results
-          run: docker exec emqx_auto_func_test_python_1 bash -xc "pip install --upgrade pip && pip install beautifulsoup4 && cd /emqx-rel/tests && python /emqx-rel/.ci/boot.py"
+          run: docker exec emqx_auto_func_test_python_1 bash -xc "pip install --upgrade pip && pip install beautifulsoup4 && cd /emqx-rel/tests && python /emqx-rel/.ci/deps_tests/boot.py"
         - uses: actions/upload-artifact@v1
           if: always()
           with:
