--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -2,12 +2,8 @@ name: Run paho tests
 
 on: 
   push:
-    #tags:
-    #  - v*
-    #branches:
-    #  - master
-    #  - develop
-    #  - release-*
+    tags:
+      - v*
   repository_dispatch:
     types: [run_tests]
 
@@ -26,15 +22,12 @@ jobs:
         - name: get deps
           run: |
             if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
-            version=develop
             docker run -i --rm -e EMQX_DEPS_DEFAULT_VSN=$version -v $(pwd):/emqx-rel erlang:22.3 bash -c "make -C /emqx-rel deps-emqx"
         - name: make emqx image
           run: |
             if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
-            version=develop
             EMQX_DEPS_DEFAULT_VSN=$version make emqx-docker-build
         - name: make paho tests
           run: |
             if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
-            version=develop
             EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx PAHO_BRANCH="develop-4.0" make -C .ci/paho_tests test
