--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -95,7 +95,7 @@ jobs:
           - debian9
           - debian8
           - opensuse
-          # - centos8
+          - centos8
           - centos7
           - centos6
 
